--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
             <h2 class="text-2xl">welcome to phone</h2>
     </header>
     <main>
-
+       <section>
+               <div id="phone-container" class="grid lg:grid-cols-3 gap-8 m-10">
+               
+               </div>
+       </section>
     </main>
     <footer>
 
