--- a/index.html
+++ b/index.html
@@ -13,8 +13,15 @@
             <h2 class="text-2xl">welcome to phone</h2>
     </header>
     <main>
+        <section>
+            <div class="bg-gray-400 p-5 rounded-lg m-5">
+                <input id="search-field" type="text" placeholder="search..." class="input input-bordered w-full max-w-xs" />
+                <button onclick="handleSearch()" class="btn btn-accent">Search</button>
+            </div>
+        </section>
+        <!-- search elements -->
        <section>
-               <div id="phone-container" class="grid lg:grid-cols-3 gap-8 m-10">
+               <div id="phone-container" class="grid lg:grid-cols-3 md:grid-cols-2 grid-cols-1 gap-8 m-10">
                
                </div>
        </section>
