--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
                <div id="phone-container" class="grid lg:grid-cols-3 md:grid-cols-2 grid-cols-1 gap-8 m-10">
                
                </div>
+               <!-- show all section -->
+               <button id="show-all-container" class="btn btn-secondary w-4 mx-auto hidden">Show all</button>
        </section>
     </main>
     <footer>
