added loader spinner

--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
         </section>
         <!-- search elements -->
        <section>
+              <!-- loading spinner -->
+               <div id="loader-spinner" class="text-center m-8 hidden">
+                <span class="loading loading-spinner loading-lg"></span>
+               </div>
                <div id="phone-container" class="grid lg:grid-cols-3 md:grid-cols-2 grid-cols-1 gap-8 m-10">
                
                </div>
