addded show all button functionality

--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
                
                </div>
                <!-- show all section -->
-               <button id="show-all-container" class="btn btn-secondary w-4 mx-auto hidden">Show all</button>
+               <div class="text-center">
+                <button onclick="handleShowAll()" id="show-all-container" class="btn btn-secondary hidden">Show all</button>
+               </div>
        </section>
     </main>
     <footer>
