dynamic api data load for phone

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                </div>
                <!-- show all section -->
                <div class="text-center">
-                <button onclick="handleShowAll()" id="show-all-container" class="btn btn-secondary hidden">Show all</button>
+                <button onclick="handleShowAll()" id="show-all-container" class="btn btn-secondary hidden mb-5">Show all</button>
                </div>
        </section>
     </main>
