--- a/index.html
+++ b/index.html
@@ -32,6 +32,22 @@
                <div class="text-center">
                 <button onclick="handleShowAll()" id="show-all-container" class="btn btn-secondary hidden mb-5">Show all</button>
                </div>
+
+               <!-- show details -->
+                <!-- Open the modal using ID.showModal() method -->
+<dialog id="show_detail_modal" class="modal modal-bottom sm:modal-middle">
+  <div class="modal-box">
+    <h2 id="show-phone-name" class="text-2xl font-bold"></h2>
+    <div id="show-modal-detail-container">
+    </div>
+    <div class="modal-action">
+        <form method="dialog">
+          <!-- if there is a button in form, it will close the modal -->
+          <button class="btn">Close</button>
+        </form>
+      </div>
+  </div>
+</dialog>
        </section>
     </main>
     <footer>
